--- a/index.html
+++ b/index.html
@@ -9,25 +9,25 @@
 </head>
 <body style="background-color:#94c8eb;">
 </div class="container mt-5">
-    <h1 style="text-align: center; font-size: 55px;">Conversor de Medidas</h1>
+    <h1 style="text-align: center; font-size: 57px;">Conversor de Medidas</h1>
     <br> 
     <form style="background-color:#94c8eb;">
-    <input class="form-control form-control-lg" style="width: 650px; font-size: 17px;" for="quantidade" type="number"  id="quantidade" placeholder="Digite o valor:">
+    <input class="form-control form-control-lg" style="width: 650px; font-size: 23px;" for="quantidade" type="number"  id="quantidade" placeholder="Digite o valor:">
     <br>
     <br>
-       <select class="form-control form-control-lg" style="width: 650px; font-size: 17px;" for=" numero-entrada" id="numero-entrada">
+       <select class="form-control form-control-lg" style="width: 650px; font-size: 23px;" for=" numero-entrada" id="numero-entrada">
         <option value="quilometros">Quilômetros</option>
         <option value="metros">Metros</option>
         <option value="milimetros">Milímetros</option>
       </select>
       <br>
-      <select class="form-control form-control-lg" style="width: 650px; font-size: 17px;" for="numero-saida" id="numero-saida">
+      <select class="form-control form-control-lg" style="width: 650px; font-size: 23px;" for="numero-saida" id="numero-saida">
         <option value="quilometros">Quilômetros</option>
         <option value="metros">Metros</option>
         <option value="milimetros">Milímetros</option>      
     </select>
     <br></br>   
-    <button type="button" style="width: 650px; font-size: 17px;" class="btn btn-online-info btn-lg" id="conversao">Resultado</button>
+    <button type="button" style="width: 650px; font-size:23px" class="btn btn-online-info btn-lg" id="conversao">Resultado</button>
     <br>
     <p style="color:black;font-size: x-large; width: 650px;" id="resultado"></p>
   </form>
